@@ -8,6 +8,16 @@ muzzle {
 
 apply from: "$rootDir/gradle/java.gradle"
 
+addTestSuite("latestDepTest")
+
 dependencies {
   compileOnly group: 'org.jboss.modules', name: 'jboss-modules', version: '1.3.0.Final'
+  testImplementation group: 'org.jboss.modules', name: 'jboss-modules', version: '1.3.0.Final'
+  latestDepTestImplementation group: 'org.jboss.modules', name: 'jboss-modules', version: '+'
+}
+
+tasks.withType(Test).configureEach {
+  if (it.javaVersion.isJava9Compatible()) {
+    jvmArgs +='--add-exports=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED'
+  }
 }
